k8s/overlays/local/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: microservices-blog
  name: microservices-blog-ingress
  annotations:
    # Local development specific annotations
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200, http://localhost"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
